VSTS - 14042 - Fix the Blue Flash Box When You Add an Item to the Membership Cart
- I added some extra padding to the top of all entries except the first one
- added margin to the bottom of all list-items
- changed the scroll bar margin to only show when the cart reaches its max-height, instead of all the time

VSTS: https://amaabca.visualstudio.com/DX_UX_Bugs/_workitems/edit/14042

--- a/app/assets/stylesheets/layout_components/cart.scss
+++ b/app/assets/stylesheets/layout_components/cart.scss
@@ -62,7 +62,7 @@
   }
 
   &__list {
-    overflow-y: scroll;
+    overflow-y: auto;
     max-height: auto;
     list-style: none;
     margin: 0;
@@ -79,9 +79,11 @@
 
   &__list-item {
     padding: $base-padding;
+    margin-bottom: $base-margin;
 
     &:not(:nth-child(1)) {
       border-top: 1px solid $smoke;
+      padding-top: $base-padding*2;
     }
   }
 
